// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the opportunity detail page. Should render detail of a opportunity. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-violet text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-plum font-semibold"
              >
                Market entry in North Macedonia
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of RFP."
                    class="object-contain w-20 h-20"
                    src="http://localhost:3000//assets/opportunities/opportunity-placeholder.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    Web Address
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//app.leverist.de/en/opportunities/market-entry-in-north-macedonia"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        app.leverist.de/en/opportunities/market-entry-in-north-macedonia
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="text-sm text-dial-stratos"
                  >
                    N/A
                  </div>
                </div>
                <div
                  class="flex flex-row gap-x-3"
                >
                  <div
                    class="flex flex-col gap-y-3 w-full"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      RFP Status
                    </div>
                    <div
                      class="flex flex-col gap-y-2 text-dial-stratos"
                    >
                      OPEN
                    </div>
                  </div>
                  <div
                    class="flex flex-col gap-y-3 w-full"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      Closing Date
                    </div>
                    <div
                      class="flex flex-col gap-y-2 text-dial-stratos"
                    >
                      Unknown
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    RFP Type
                  </div>
                  <div
                    class="flex flex-col gap-y-2 text-dial-stratos"
                  >
                    OTHER
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    Origin
                  </div>
                  <div
                    class="flex flex-col gap-y-2 text-dial-stratos"
                  >
                    GIZ
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
            <div
              class="flex flex-col gap-y-3 text-sm py-3"
            >
              <div
                class="font-semibold text-dial-plum"
              >
                Jump To
              </div>
              <div
                class=" css-1uaxf62-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-:r0:-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="react-select__control css-afrqkl-control"
                >
                  <div
                    class="react-select__value-container css-17t7gkf-ValueContainer"
                  >
                    <div
                      class="react-select__placeholder css-5rjclb-placeholder"
                      id="react-select-:r0:-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class="react-select__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby="react-select-:r0:-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Current active navigation"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="react-select__input"
                        id="async-select-id-undefined"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
            <div
              class="hidden lg:flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Bookmark
                </div>
                <button
                  class="group flex flex-row gap-x-3"
                  type="button"
                >
                  <img
                    alt="Logo of Bookmark."
                    class="object-contain"
                    height="40"
                    src="/ui/v1/bookmark-icon.svg"
                    width="40"
                  />
                  <div
                    class="my-auto border-b border-transparent group-hover:border-dial-slate-500"
                  >
                    <div
                      class="text-sm text-dial-stratos text-left"
                    >
                      Bookmark this page.
                    </div>
                  </div>
                </button>
                <div
                  class="text-sm text-dial-stratos"
                >
                  Your bookmarks can be found in your Account page.
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Share
                </div>
                <div
                  class="flex flex-row gap-3"
                >
                  <button>
                    <img
                      alt="Logo of LinkedIn."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/linkedin-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <div
                      class="bg-dial-iris-blue rounded-full w-[40px] h-[40px]"
                    >
                      <div
                        class="flex items-center h-full"
                      >
                        <img
                          alt="Logo of WhatsApp."
                          class="my-auto mx-auto"
                          height="20"
                          src="/ui/v1/whatsapp-icon.svg"
                          width="20"
                        />
                      </div>
                    </div>
                  </button>
                  <button>
                    <img
                      alt="Logo of Email."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/email-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <img
                      alt="Logo of Copy."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/copy-icon.svg"
                      width="40"
                    />
                  </button>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Comment
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  
    Have a question for the community on this RFP or have some insight you would like to share?
  
                </div>
                <div
                  class="flex text-white"
                >
                  <div
                    class="bg-dial-iris-blue rounded-md text-sm"
                  >
                    <button
                      class="px-5 py-3"
                      type="button"
                    >
                      Post a comment
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <div
          class="px-4 lg:px-0 py-4 lg:py-6"
        >
          <div
            class="flex flex-col gap-y-3"
          >
            <div
              class="text-xl font-semibold text-dial-plum py-3"
            >
              Description
            </div>
            <div
              class="block"
            >
              <div
                class="relative"
              >
                <div
                  class="html-react-parser-viewer text-base"
                >
                  Description for the opportunity
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Countries
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  />
                </div>
                <div
                  class="grid grid-cols-1 lg:grid-cols-2 gap-x-8 gap-y-3"
                >
                  <div>
                    <div
                      class="relative"
                    >
                      <a
                        href="/countries/al"
                      >
                        <div
                          class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                        >
                          <div
                            class="flex flex-row gap-x-3 px-6 h-full"
                          >
                            <img
                              alt="Flag for country: AL."
                              class="object-contain w-10 h-10 my-auto"
                              src="https://flagsapi.com/AL/flat/64.png"
                            />
                            <div
                              class="text-sm font-semibold text-dial-plum my-auto line-clamp-1"
                            >
                              Albania
                            </div>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div>
                    <div
                      class="relative"
                    >
                      <a
                        href="/countries/xk"
                      >
                        <div
                          class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                        >
                          <div
                            class="flex flex-row gap-x-3 px-6 h-full"
                          >
                            <img
                              alt="Flag for country: XK."
                              class="object-contain w-10 h-10 my-auto"
                              src="https://flagsapi.com/XK/flat/64.png"
                            />
                            <div
                              class="text-sm font-semibold text-dial-plum my-auto line-clamp-1"
                            >
                              Kosovo
                            </div>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div>
                    <div
                      class="relative"
                    >
                      <a
                        href="/countries/mk"
                      >
                        <div
                          class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                        >
                          <div
                            class="flex flex-row gap-x-3 px-6 h-full"
                          >
                            <img
                              alt="Flag for country: MK."
                              class="object-contain w-10 h-10 my-auto"
                              src="https://flagsapi.com/MK/flat/64.png"
                            />
                            <div
                              class="text-sm font-semibold text-dial-plum my-auto line-clamp-1"
                            >
                              North Macedonia
                            </div>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Building Blocks
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  />
                </div>
                <div
                  class="text-sm italic text-dial-stratos mb-3"
                >
                  
    Note: As part of the GovStack Initiative, DIAL is working to map digital platforms
    with key Building Block functionalities. Currently, all mappings between products
    and building blocks are "Beta" and are shown as illustrative examples of how these
    tools may support building block functionalities. As Building Block specifications
    are developed, products that are aligned with the specifications will be tagged as
    such.
  
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  We do not have any Building Block information for this RFP.
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Organizations
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  />
                </div>
                <div
                  class="text-sm italic text-dial-stratos"
                >
                  
    The following organizations support the development and / or implementation of this RFP.
  
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  We do not have any Organization information for this RFP.
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Use Cases
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  />
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  We do not have any Use Case information for this RFP.
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Tags
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  />
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  We do not have any Tag information for this RFP.
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="lg:hidden flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Bookmark
                </div>
                <button
                  class="group flex flex-row gap-x-3"
                  type="button"
                >
                  <img
                    alt="Logo of Bookmark."
                    class="object-contain"
                    height="40"
                    src="/ui/v1/bookmark-icon.svg"
                    width="40"
                  />
                  <div
                    class="my-auto border-b border-transparent group-hover:border-dial-slate-500"
                  >
                    <div
                      class="text-sm text-dial-stratos text-left"
                    >
                      Bookmark this page.
                    </div>
                  </div>
                </button>
                <div
                  class="text-sm text-dial-stratos"
                >
                  Your bookmarks can be found in your Account page.
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Share
                </div>
                <div
                  class="flex flex-row gap-3"
                >
                  <button>
                    <img
                      alt="Logo of LinkedIn."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/linkedin-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <div
                      class="bg-dial-iris-blue rounded-full w-[40px] h-[40px]"
                    >
                      <div
                        class="flex items-center h-full"
                      >
                        <img
                          alt="Logo of WhatsApp."
                          class="my-auto mx-auto"
                          height="20"
                          src="/ui/v1/whatsapp-icon.svg"
                          width="20"
                        />
                      </div>
                    </div>
                  </button>
                  <button>
                    <img
                      alt="Logo of Email."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/email-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <img
                      alt="Logo of Copy."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/copy-icon.svg"
                      width="40"
                    />
                  </button>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
            </div>
            <div
              class="text-dial-sapphire"
            >
              <div
                id="comments-section"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the opportunity detail page. Should render edit page for logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-plum font-semibold"
              >
                Market entry in North Macedonia
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of RFP."
                    class="object-contain w-20 h-20"
                    src="http://localhost:3000//assets/opportunities/opportunity-placeholder.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    Web Address
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//app.leverist.de/en/opportunities/market-entry-in-north-macedonia"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        app.leverist.de/en/opportunities/market-entry-in-north-macedonia
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    >
                      <button
                        class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                        type="button"
                      >
                        <svg
                          class="inline pb-0.5"
                          fill="none"
                          height="1em"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 20h9"
                          />
                          <path
                            d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                          />
                        </svg>
                        <span
                          class="text-sm px-1"
                        >
                          Edit
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="text-sm text-dial-stratos"
                  >
                    N/A
                  </div>
                </div>
                <div
                  class="flex flex-row gap-x-3"
                >
                  <div
                    class="flex flex-col gap-y-3 w-full"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      RFP Status
                    </div>
                    <div
                      class="flex flex-col gap-y-2 text-dial-stratos"
                    >
                      OPEN
                    </div>
                  </div>
                  <div
                    class="flex flex-col gap-y-3 w-full"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      Closing Date
                    </div>
                    <div
                      class="flex flex-col gap-y-2 text-dial-stratos"
                    >
                      Unknown
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    RFP Type
                  </div>
                  <div
                    class="flex flex-col gap-y-2 text-dial-stratos"
                  >
                    OTHER
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    Origin
                  </div>
                  <div
                    class="flex flex-col gap-y-2 text-dial-stratos"
                  >
                    GIZ
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <form>
          <div
            class="px-4 lg:px-0 py-4 lg:py-6 text-dial-plum"
          >
            <div
              class="flex flex-col gap-y-6 text-sm"
            >
              <div
                class="text-xl font-semibold"
              >
                Edit Market entry in North Macedonia
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="name"
                >
                  Name
                </label>
                <input
                  class="w-full text-sm"
                  id="name"
                  name="name"
                  placeholder="Name"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label>
                  Logo
                </label>
                <label
                  class="flex items-center"
                >
                  <input
                    accept=".jpg,.jpeg,.png,.bmp"
                    class="bg-white file:hidden w-full text-sm"
                    name="imageFile"
                    type="file"
                  />
                  <div
                    class="-ml-11 flex p-1"
                  >
                    <span
                      class="h-full pl-1 border-l text-dial-gray-dark border-dial-gray-dark"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                        />
                        <path
                          d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                        />
                        <path
                          d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
                <div
                  class="text-xs italic text-dial-stratos"
                >
                  Note: Supported file types are jpg, png, and bmp
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="webAddress"
                >
                  Web Address
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <span
                    class="select-none text-dial-gray"
                  >
                    https://
                  </span>
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="webAddress"
                    placeholder="Web Address"
                    value="app.leverist.de/en/opportunities/market-entry-in-north-macedonia"
                  />
                </div>
              </div>
              <div
                class="border-b border-dashed border-dial-plum"
              />
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="opportunityStatus"
                >
                  RFP Status
                </label>
                <div
                  class=" css-sqp82o-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r1:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1dimb5e-singleValue"
                      >
                        Open
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-id-opportunityStatus"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="opportunityType"
                >
                  RFP Type
                </label>
                <div
                  class=" css-sqp82o-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r2:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1dimb5e-singleValue"
                      >
                        Other
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-id-opportunityType"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="opportunityOrigin"
                >
                  Origin
                </label>
                <div
                  class=" css-sqp82o-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r3:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1dimb5e-singleValue"
                      >
                        GIZ
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-id-opportunityOrigin"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="openingDate"
                >
                  Opening Date
                </label>
                <input
                  class="w-full text-sm"
                  id="openingDate"
                  name="openingDate"
                  placeholder="Opening Date"
                  type="date"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="closingDate"
                >
                  Closing Date
                </label>
                <input
                  class="w-full text-sm"
                  id="closingDate"
                  name="closingDate"
                  placeholder="Closing Date"
                  type="date"
                  value=""
                />
              </div>
              <div
                class="border-b border-dashed border-dial-plum"
              />
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="contactName"
                >
                  Full Name
                </label>
                <input
                  class="validation-error w-full text-sm"
                  id="contactName"
                  name="contactName"
                  placeholder="Full Name"
                  type="text"
                  value=""
                />
                <p
                  class="text-xs italic text-validation-error"
                >
                  This field is required
                </p>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="contactEmail"
                >
                  Email Address
                </label>
                <input
                  class="validation-error w-full text-sm"
                  id="contactEmail"
                  name="contactEmail"
                  placeholder="Email Address"
                  type="text"
                  value=""
                />
                <p
                  class="text-xs italic text-validation-error"
                >
                  This field is required
                </p>
              </div>
              <label
                class="flex gap-x-2 items-center self-start"
              >
                <input
                  class="h-5 w-5"
                  name="govStackEntity"
                  type="checkbox"
                />
                GovStack RFP
              </label>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                >
                  Description
                </label>
                <div
                  class="relative"
                >
                  <svg
                    class="absolute text-lg inset-x-1/2 top-10 spinner"
                    fill="currentColor"
                    height="2em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="2em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
                    />
                  </svg>
                  <div
                    class="html-editor"
                  >
                    <textarea
                      id="description-editor"
                      style="visibility: hidden;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex flex-wrap text-base mt-6 gap-3"
              >
                <button
                  class="submit-button"
                  type="submit"
                >
                  Submit RFP
                </button>
                <button
                  class="cancel-button"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the opportunity detail page. Should render unauthorized for non logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-plum font-semibold"
              >
                Market entry in North Macedonia
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of RFP."
                    class="object-contain w-20 h-20"
                    src="http://localhost:3000//assets/opportunities/opportunity-placeholder.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    Web Address
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//app.leverist.de/en/opportunities/market-entry-in-north-macedonia"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        app.leverist.de/en/opportunities/market-entry-in-north-macedonia
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="text-sm text-dial-stratos"
                  >
                    N/A
                  </div>
                </div>
                <div
                  class="flex flex-row gap-x-3"
                >
                  <div
                    class="flex flex-col gap-y-3 w-full"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      RFP Status
                    </div>
                    <div
                      class="flex flex-col gap-y-2 text-dial-stratos"
                    >
                      OPEN
                    </div>
                  </div>
                  <div
                    class="flex flex-col gap-y-3 w-full"
                  >
                    <div
                      class="font-semibold text-dial-sapphire"
                    >
                      Closing Date
                    </div>
                    <div
                      class="flex flex-col gap-y-2 text-dial-stratos"
                    >
                      Unknown
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    RFP Type
                  </div>
                  <div
                    class="flex flex-col gap-y-2 text-dial-stratos"
                  >
                    OTHER
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-sapphire"
                  >
                    Origin
                  </div>
                  <div
                    class="flex flex-col gap-y-2 text-dial-stratos"
                  >
                    GIZ
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <div
          class="h-[60vh]"
        >
          <div
            class="flex bg-dial-alice-blue h-full"
          >
            <div
              class="text-dial-stratos text-lg w-full my-auto flex flex-col gap-4"
            >
              <svg
                class="mx-auto"
                fill="currentColor"
                height="3em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="3em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                />
              </svg>
              <div
                class="text-center mt-5"
              >
                You are not authorized to view this page
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
